--- a/EscalArt/templates/escalArt/search.html
+++ b/EscalArt/templates/escalArt/search.html
@@ -6,31 +6,111 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <title>Buscando</title>
+    <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/Ayuda-Cliente.css' %}">
+    <script src="https://kit.fontawesome.com/943e4f11a2.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/Menu-Fotter.css' %}">
-
+    <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/Slider.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/home.css' %}">
     <script type="text/javascript" src="{% static 'EscalArt/js/menu.js' %}"></script>
+    <!--Iconos-->
+    <script src="https://kit.fontawesome.com/943e4f11a2.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 
 </head>
 
 <body>
-    {% include 'escalArt/includes/menu.html' %} {% block content %}
+    {% include 'escalArt/includes/menu.html' %}
+    <h1 class="titulo">Usuarios</h1>
     <div class="container">
 
         {% for perfil in lista_perfil %}
-        <div style="height: 36.5vh;" class="row justify-content-center mt-3">
+        <div class="row justify-content-center mt-3">
             <div class="col-md-5 col-sm-12 border-bottom position-relative">
-                <p><a style="text-decoration: none;" href=" {% url 'perfil' perfil.idUser.username %}">
-                @{{perfil.idUser.username}}
-                </a></p>
+                <p>
+                    <a style="text-decoration: none;" href=" {% url 'perfil' perfil.idUser.username %}">
+                        @{{perfil.idUser.username}}
+                    </a>
+                </p>
             </div>
         </div>
+        {%empty%} {% for perfil in lista_perfil_tag %}
+        <div class="row justify-content-center mt-3">
+            <div class="col-md-5 col-sm-12 border-bottom position-relative">
+                <p>
+                    <a style="text-decoration: none;" href=" {% url 'perfil' perfil.idUser.username %}">
+                        @{{perfil.idUser.username}}
+                    </a>
+                </p>
+            </div>
+        </div>
+        {%empty%}
+        <p>No se han encontrado Usuarios</p>
 
-        {% endfor %}
+        {% endfor %} {% endfor %}
+
+        <h1 class="titulo">Publicaciones</h1>
+        <section class="galeria">
+            {% for post in lista_post %}
+
+            <article class="post ">
+
+                <div class="post-body ">
+                    <div class="post-container">
+                        <a class="column" href="{% url 'perfil' post.idUser.username %}">
+                        
+                        {% if p.idUser.imagen %}
+                        <img id="foto-perfil" src="/{{ post.idUser.imagen}}" alt="Galeria de imagenes">
+                            {%else%}
+                            <img src="{% static 'EscalArt/img/perfil.jpg' %}" id="foto-perfil" alt="">
+                        {% endif %}
+                            
+                    </a>
+                        <a class="column" href="{% url 'perfil' post.idUser.username %}">
+                            <h3 class="username">{{post.idUser.username}}</h3>
+                        </a>
+                        <h2 class="titulo-post column">{{post.titulo}}</h2>
+
+                    </div>
+                    <span class="linea_2"></span>
+                    <P class="descripcion-post " id="descripcion-post">{{post.descripcion}}
+                        <br>{% for tag in post.tags.all %}
+                        <a href="{% url 'tagged' tag.slug %}" class="mr-1 badge badge-info">#{{ tag }}</a> {% endfor %}
+
+                    </P>
+                    <div>
+                        {% if user.is_authenticated %}
+                        <form class="post-likes column" method="post" action="{% url 'like' post.idPublicacion %}">
+                            {% csrf_token %}
+                            <input type="hidden" name="next" value="{{request.path}}?query={{request.GET.query}}">
+                            <button type=" submit " style="background-color:transparent; border:none;box-shadow:none; "><span class="post-likes column "><i class="fa-solid fa-heart corazon "></i></span></button>
+
+
+                        </form>
+                        <span class="post-likes column " id="cant-likes ">{{post.cantLikes.all.count}}</span> {%else%}
+                        <span class="post-likes column "><i class="fa-solid fa-heart corazon "></i></span>
+                        <span class="post-likes column " id="cant-likes ">{{post.cantLikes.all.count}}</span> {%endif%}
+
+                    </div>
+                </div>
+                <div class="post-header ">
+                    <a href="{% url 'publicacion' post.idUser.username post.idPublicacion %} " name="idPost " id="idPost ">
+                        <img id="post-imagen " src="/{{ post.imagen }} " alt="Galeria de imagenes ">
+                    </a>
+                </div>
+            </article>
+            {%empty%}
+            <p>No se han encontrado publicaciones</p>
+            {% endfor %}
+        </section>
+
 
     </div>
-    {%endblock content%} {% include 'escalArt/includes/footer.html' %}
+    {% include 'escalArt/includes/footer.html' %}
 
 </body>
 
