--- a/EscalArt/templates/escalArt/index.html
+++ b/EscalArt/templates/escalArt/index.html
@@ -47,15 +47,17 @@
     <h1 class="titulo">Lo mas visto!</h1>
     <section class="section-chips">
         <div class="chips-container">
-            <span class="chips">Categoria 1</span>
+            {% for mt in common_tags %}
+            <span><a href="{% url 'tagged' mt.slug %}" style="text-decoration: none;" class="badge badge-success chips">{{mt}}</a></span> {% endfor %}
+            <!-- <span class="chips">Categoria 1</span>
             <span class="chips">Categoria 2</span>
             <span class="chips">Categoria 3</span>
-            <span class="chips">Categoria </span>
+            <span class="chips">Categoria </span> -->
         </div>
     </section>
 
     <section class="galeria">
-        {% if posts is not None %} {% for p in posts|shuffle %}
+        {% if posts is not None %} {% for p in posts %}
         <!--  -->
         <article class="post ">
 
@@ -77,23 +79,24 @@
 
                 </div>
                 <span class="linea_2"></span>
-                <P class="descripcion-post " id="descripcion-post">{{p.descripcion}}</P>
+                <P class="descripcion-post " id="descripcion-post">{{p.descripcion}}
+                    <br>{% for tag in p.tags.all %}
+                    <a href="{% url 'tagged' tag.slug %}" class="mr-1 badge badge-info">#{{ tag }}</a> {% endfor %}
+
+                </P>
                 <div>
                     {% if user.is_authenticated %}
-                                <form class="post-likes column"  method="post" action="{% url 'like' p.idPublicacion %}">
-                                    {% csrf_token %}
-                                    <input type="hidden" name="next" value="{{request.path}}">
-                                    <button type="submit" style="background-color:transparent; border:none;box-shadow:none;"><span class="post-likes column"><i class="fa-solid fa-heart corazon"></i></span></button>
-                                
+                    <form class="post-likes column" method="post" action="{% url 'like' p.idPublicacion %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="next" value="{{request.path}}">
+                        <button type="submit" style="background-color:transparent; border:none;box-shadow:none;"><span class="post-likes column"><i class="fa-solid fa-heart corazon"></i></span></button>
 
-                                </form>
-                                <span class="post-likes column" id="cant-likes">{{p.cantLikes.all.count}}</span>
-                                {%else%}
-                                <span class="post-likes column"><i class="fa-solid fa-heart corazon"></i></span>
-                                <span class="post-likes column" id="cant-likes">{{p.cantLikes.all.count}}</span>
-            
-                                {%endif%}
-                    
+
+                    </form>
+                    <span class="post-likes column" id="cant-likes">{{p.cantLikes.all.count}}</span> {%else%}
+                    <span class="post-likes column"><i class="fa-solid fa-heart corazon"></i></span>
+                    <span class="post-likes column" id="cant-likes">{{p.cantLikes.all.count}}</span> {%endif%}
+
                 </div>
             </div>
             <div class="post-header ">
