--- a/EscalArt/static/escalArt/css/Ayuda-Cliente.css
+++ b/EscalArt/static/escalArt/css/Ayuda-Cliente.css
@@ -13,73 +13,89 @@ body {
 
 /*parte superior*/
 
-.contenedor {
+
+/* Slider Ayuda Cliente */
+
+.seccion-slider {
     width: 100%;
-    display: flex;
-    margin-bottom: -100px;
-    justify-content: center;
-    align-items: center;
 }
 
-.contenedor figure {
+.contenedor-slider {
+    width: 100%;
     position: relative;
-    height: 450px;
-    width: 1900px;
     overflow: hidden;
-    border-radius: 6px;
-    box-shadow: 0px 15px 25px #12130F;
-    margin-top: -70px;
+    margin: 0;
 }
 
-.contenedor figure img {
+.slider {
+    display: flex;
+    width: 400%;
+}
+
+.slider__section {
     width: 100%;
-    height: 100%;
-    transition: all 500ms ease-out;
+    position: relative;
 }
 
-.contenedor figure .capa {
+.slider__section h1 {
     position: absolute;
-    top: 0;
+    top: 30%;
+    left: 50%;
+    color: #fff;
+    transform: translate(-50%, -50%);
+    text-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+    font-size: 3rem;
+}
+
+.slider__section p {
+    position: absolute;
+    font-size: 1.5rem;
+    top: 70%;
+    left: 50%;
+    color: #fff;
+    transform: translate(-50%, -50%);
+    text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
+}
+
+.slider__img {
+    display: block;
     width: 100%;
     height: 100%;
-    background: rgba(11, 103, 123, 0.7);
-    /*background: #86C332;*/
-    transition: all 500ms ease-out;
-    opacity: 0;
-    visibility: hidden;
+}
+
+.Slide {
+    width: inherit;
+    height: 400px;
+}
+
+.btn-prev,
+.btn-next {
+    width: 40px;
+    height: 40px;
+    background: rgba(255, 255, 255, 0.7);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    line-height: 40px;
+    font-size: 30px;
+    font-weight: bold;
     text-align: center;
+    border-radius: 50%;
+    font-family: monospace;
+    cursor: pointer;
 }
 
-.contenedor figure:hover>.capa {
-    opacity: 1;
-    visibility: visible;
+.btn-prev:hover,
+.btn-next:hover {
+    background: white;
 }
 
-.contenedor figure:hover>img {
-    transform: scale(1.3);
+.btn-prev {
+    left: 10px;
 }
 
-.contenedor figure:hover>.capa h3 {
-    margin-top: 70px;
-    margin-bottom: 15px;
-}
-
-.contenedor figure .capa h3 {
-    color: #12130F;
-    font-weight: 400;
-    margin-bottom: 120px;
-    transition: all 500ms ease-out;
-    margin-top: 30px;
-    font-size: 50px;
-}
-
-.contenedor figure .capa p {
-    color: #12130F;
-    font-size: 22px;
-    line-height: 1.5;
-    margin: auto;
-    width: 100%;
-    max-width: 500px;
+.btn-next {
+    right: 10px;
 }
 
 
@@ -265,32 +281,6 @@ body {
     background: #659523;
     box-shadow: 1px 7px 6px 1px rgba(0, 0, 0, .1);
     transform: translateY(-2px);
-}
-
-@media (max-width:840px) {
-    .content {
-        grid-template-columns: repeat(1, 1fr);
-        margin-top: 150px;
-    }
-    .contenedor {
-        height: 100%;
-        width: 100%;
-    }
-    .nav {
-        font-size: 10px;
-    }
-    .buscar input {
-        height: 100%;
-        width: 100%;
-        font-size: 10px;
-    }
-    .menu i {
-        font-size: 10px;
-    }
-    .btn {
-        width: 25px;
-        height: 25px;
-    }
 }
 
 @media (max-width:600px) {
